--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<!-- font awesome  -->
+<link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
+
+
+    <title>City tours</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
